# pathfinder

./: .dockerignore  .env.example  .gitignore  BACKEND_STATUS.md  CLAUDE.md  Cargo.toml  DEPLOYMENT.fly.md  DEPLOYMENT.md  Dockerfile  Dockerfile.game-generator  README.Docker.md  README.md  SPEC.md  crontab  docker-compose.yml  fly.toml  game_generator_entrypoint.sh  index.html  package-lock.json  package.json  test-debug-overlay.html  test_integration.sh  vite.config.js  wordlist  wrangler.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy-backend.yml  deploy-frontend.yml  deploy.yml  docker_build_and_push.yml
backend-simple/: Cargo.toml
hooks/: README.md  install.sh  pre-commit  pre-push
scripts/: cron_entrypoint.sh  generate-wordlist.js  restore_backup.sh  setup_rclone.sh  store_backup.sh
src/: App.jsx  App.tsx
src/api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README_SECURITY.md  SECURITY.md  build.rs  test_wordlist  wordlist
src/api/examples/: game_generator.rs  optimal_word_finder.rs
src/api/migrations/: 001_initial.sql  002_add_sequence_number.sql  007_change_completed_at_to_timestamp_tz.sql
src/api/migrations/postgres/: 001_initial.sql  002_add_sequence_number.sql  003_add_game_answers.sql  004_remove_paths_from_game_answers.sql  005_add_optimal_solutions.sql  006_add_game_completion_fields.sql
src/api/migrations/sqlite/: 001_migrate_from_postgres.sql  20250924213229_remove_idx_game_answers_word.sql
src/api/proto/: game.proto
src/api/src/: game_generator.rs  http_api.rs  lib.rs  main.rs  memory_profiler.rs  serialization.rs  service.rs  test_utils.rs
src/api/src/db/: conversions.rs  mod.rs  models.rs  repository.rs  repository_postgres.rs  repository_simple.rs  repository_sqlite.rs  storage_types.rs
src/api/src/game/: conversion.rs  directions.rs  mod.rs  scoring.rs  trie.rs  utils.rs
src/api/src/game/board/: answer.rs  constraints.rs  mod.rs  path.rs
src/api/src/security/: config.rs  cors.rs  headers.rs  mod.rs  rate_limit.rs  referer.rs  session.rs  tests.rs  utils.rs
src/api/src/social/: bluesky.rs  mod.rs
src/components/: AnswerInput.jsx  AnswerSection.jsx  AnswerSection.tsx  Board.jsx  HeatmapModal.jsx  HeatmapModal.tsx  Tile.jsx  Tile.tsx
src/data/: wordList.js  wordList.ts
src/utils/: boardGeneration.js  boardGeneration.ts  pathfinding.js  pathfinding.ts  scoring.js  scoring.ts
src/web/: .dockerignore  App.tsx  Dockerfile  index.html  main.css  main.tsx  nginx.conf
src/web/api/: gameApi.ts
src/web/components/: AnswerInput.tsx  AnswerSection.tsx  Board.tsx  ConstraintDisplay.tsx  DebugOverlay.tsx  HeatmapModal.tsx  Logo.css  Logo.tsx  SEOHead.tsx  Tile.tsx  Tutorial.tsx
src/web/hooks/: useMobileDetection.ts  useUser.ts  useVirtualKeyboard.ts
src/web/public/: _headers  robots.txt  site.webmanifest  sitemap.xml
src/web/test/: App.test.tsx  constraintResolution.test.ts  fu_bug.test.ts  gameApi.test.ts  pathfinding.test.ts  puzzle8-validation.test.tsx  scoring_debug.test.ts  setup.ts  util.test.tsx  validation.test.ts
src/web/utils/: boardGeneration.ts  constraintResolution.ts  models.ts  pathfinding.ts  scoring.ts  validation.ts
