[package]
name = "word-game-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }


# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "macros"] }

# Serialization and time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Environment and configuration
dotenvy = "0.15"

# Scheduling
tokio-cron-scheduler = "0.11"

# Random number generation for game generation
rand = "0.8"
rand_seeder = "0.3"

# Game logic dependencies (reuse from word-game)
log = "0.4"


[dev-dependencies]
tokio-test = "0.4"
