[package]
name = "word-game-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "timeout", "limit"] }
# tower-governor = "0.4"  # Not needed as we use direct governor


# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros"] }

# Serialization and time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Environment and configuration
dotenvy = "0.15"

# Scheduling
tokio-cron-scheduler = "0.11"

# Random number generation for game generation
rand = "0.8"
rand_seeder = "0.3"

# Caching for immutable game responses
moka = { version = "0.12", features = ["future"] }

# Security dependencies
governor = "0.6"
tower-cookies = "0.10"
base64 = "0.22"
sha2 = "0.10"
ring = "0.17"
url = "2.5"
nonzero = "0.2"

# Game logic dependencies (reuse from word-game)
log = "0.4"
phf = { version = "0.11", features = ["macros"] }

# Memory profiling
sysinfo = "0.30"


[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
