[package]
name = "pathfinder"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api-server"
path = "src/main.rs"

[[bin]]
name = "game-generator"
path = "src/bin/game_generator.rs"

[[bin]]
name = "stat-poster"
path = "src/bin/stat_poster.rs"

[[bin]]
name = "game-ender"
path = "src/bin/game_ender.rs"

[[bin]]
name = "run-migrations"
path = "src/bin/run_migrations.rs"

[[bin]]
name = "sqlite-migrator"
path = "src/bin/sqlite_migrator.rs"

[dependencies]
# Web framework and async runtime
axum = { version = "0.7", features = ["macros"] }
mime_guess = "2.0.5"
rust-embed = "8.7.2"
tokio = { version = "1.0", features = ["full"] }
tokio-cron-scheduler = "0.10"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "fs", "timeout", "limit"] }


# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "macros", "sqlite"] }

# Serialization and time
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Environment and configuration
dotenvy = "0.15"


# Random number generation for game generation
rand = "0.8"
rand_seeder = "0.3"

# Caching for immutable game responses
moka = { version = "0.12", features = ["future"] }
tower-cookies = "0.10"
base64 = "0.22"
ring = "0.17"
url = "2.5"
phf = { version = "0.11", features = ["macros"] }

# Memory profiling
sysinfo = "0.30"

# BlueSky SDK for social media integration
bsky-sdk = "0.1"
atrium-api = "0.25.4"


[features]
default = []
database-tests = []
integration-tests = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
